# FastAPI_Menu

./: .env.example  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose-test.yaml  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: coverage.yml  flake8.yml
src/accessors/: __init__.py  base_accessors.py  menus_accessor.py  menus_accessors.py
src/api/v1/routes/: menus.py
src/api/v1/schemas/: menus.py
src/celery/: Dockerfile  requirements.txt  script.py  tasks.py
src/core/: config.py
src/data/: menu.json
src/db/: cache.py  db.py
src/migrations/: env.py
src/migrations/versions/: 23ccfdfd1016_first_migration.py  5d1c2fb11e11_add_models.py  643781f8f572_change_descriptions_constraint.py  80f5349b8b9b_add_models.py  9edc3529b872_add_cascade_deleting.py
src/models/: menu.py
src/services/: base.py  menus.py  mixins.py
tests/: conftest.py
tests/routes/: test_menus.py
