[tool.poetry]
name = "fastapi-ylab"
version = "1.0.0"
description = "API for restaraunt-menu"
authors = ["sadlaboka <jiutbuh@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_ylab"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
python-dotenv = "^0.21.0"
psycopg2-binary = "^2.9.5"
asyncpg = "^0.27.0"
alembic = "^1.9.1"
sqlalchemy = "^2.0.0"
aioredis = "^2.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
ipython = "^8.8.0"
isort = "^5.11.4"
flake8 = "^6.0.0"
httpx = "^0.23.3"
pre-commit = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
